--- a/style.css
+++ b/style.css
@@ -1,14 +1,27 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
 * {
   box-sizing: border-box; /*so padding and border doesnt effect the width and height of the element*/
 }
 
 body {
-  font-family: "Roboto", sand-serif;
   margin: 0;
   min-height: 100vh; /* we need to assign a height so the items knows where to center*/
+}
+.header {
+  width: 100%;
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center;
+  margin-top: 20px;
+}
+.chuck-sticker {
+  margin-top: -50px;
+}
+h1 {
+  font-size: 67px;
+  font-family: "Bangers", cursive;
+}
+.search {
+  border-radius: 8px;
+  width: 50%;
+  margin: 0 auto;
 }
